--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.goodocom.gocsdkfinal"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="2.0" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -28,6 +28,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -44,7 +45,10 @@
             </intent-filter>
         </activity>
         <activity android:name="com.goodocom.gocsdkfinal.activity.CallActivity"></activity>
-        <activity android:name="com.goodocom.gocsdkfinal.activity.InComingActivity"></activity>
+        <activity android:name="com.goodocom.gocsdkfinal.activity.InComingActivity"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true">            
+        </activity>
        <activity android:name="com.goodocom.gocsdkfinal.activity.TransparentActivity"
            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"></activity>
         
