--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,18 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        
+        <activity android:name="com.goodocom.gocsdkfinal.activity.SettingsActivity"
+            android:exported="true">         
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <service android:name="com.goodocom.gocsdkfinal.service.GocsdkExtService">
+            <intent-filter>
+                <action android:name="com.goodocom.gocsdkfinal.service.GocsdkExtService" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
