--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
+        android:theme="@android:style/Theme.Material.Light.NoActionBar" >
         <activity
             android:name="com.goodocom.gocsdkfinal.activity.MainActivity"
             android:label="@string/app_name" >
