--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.goodocom.gocsdkfinal"
-    android:versionCode="2"
-    android:versionName="2.0" >
+    android:versionCode="3"
+    android:versionName="3.0" >
 
     <uses-sdk
         android:minSdkVersion="21"
@@ -53,14 +53,22 @@
        <activity android:name="com.goodocom.gocsdkfinal.activity.TransparentActivity"
            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"></activity>
         
-        <service android:name="com.goodocom.gocsdkfinal.service.GocsdkService"></service>
+        <service android:name="com.goodocom.gocsdkfinal.service.GocsdkService"
+            >
+            <intent-filter>
+                <android android:name="com.goodocom.gocsdk.IGocsdkService" />
+            </intent-filter>
+        </service>
+        
         <service android:name="com.goodocom.gocsdkfinal.service.PlayerService"></service>
         <service android:name="com.goodocom.gocsdkfinal.service.ScoService"></service>
         
         <receiver android:name="com.goodocom.gocsdkfinal.receiver.BootReceiver">
+            <!--  
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
+            -->
         </receiver>
         
         <activity android:name="com.goodocom.gocsdkfinal.activity.SettingsActivity"
