--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,8 +29,9 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.VIBRATE" />    
-
+    <uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -39,11 +40,13 @@
         <activity
             android:name="com.goodocom.gocsdkfinal.activity.MainActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
         <activity android:name="com.goodocom.gocsdkfinal.activity.CallActivity"></activity>
         <activity android:name="com.goodocom.gocsdkfinal.activity.InComingActivity"
@@ -82,6 +85,15 @@
                 <action android:name="com.goodocom.gocsdkfinal.service.GocsdkExtService" />
             </intent-filter>
         </service>
+        <activity android:name="com.goodocom.gocsdkfinal.activity.ChooseCallActivity"
+            android:theme="@style/ChooseCallActivityTheme">
+            <!--  
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
     </application>
 
 </manifest>
