--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,13 +40,12 @@
         <activity
             android:name="com.goodocom.gocsdkfinal.activity.MainActivity"
             android:label="@string/app_name" >
-            
+            <!-- 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            
+             -->
         </activity>
         <activity android:name="com.goodocom.gocsdkfinal.activity.CallActivity"></activity>
         <activity android:name="com.goodocom.gocsdkfinal.activity.InComingActivity"
@@ -79,6 +78,7 @@
             android:exported="true">         
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <service android:name="com.goodocom.gocsdkfinal.service.GocsdkExtService">
