1、修改 通讯录，通话记录新UI

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -78,7 +78,7 @@
             android:exported="true">         
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             </intent-filter>
         </activity>
         <service android:name="com.goodocom.gocsdkfinal.service.GocsdkExtService">
@@ -94,6 +94,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
+        </activity>
+        <activity android:name="com.goodocom.gocsdkfinal.activity.WtContactsActivity"
+            android:theme="@style/SettingsActivityTheme"
+            android:exported="true">         
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
